[gd_scene load_steps=5 format=3 uid="uid://xseu36qbixsb"]

[ext_resource type="Script" uid="uid://u8g80ymgwcp4" path="res://src/scenes/MapMaker/AreaDefiner/area_maker.gd" id="1_wqt65"]
[ext_resource type="Script" uid="uid://ck6do5xda2rxu" path="res://src/scenes/MapMaker/AreaDefiner/change_bg_image.gd" id="2_agvtm"]
[ext_resource type="Texture2D" uid="uid://chpympjbsbdqf" path="res://assets/textures/ui_icons/ef_mt.png" id="3_oexlg"]
[ext_resource type="Script" uid="uid://d1bo5kshifflh" path="res://src/scenes/MapMaker/AreaDefiner/new_area_link.gd" id="4_nct1h"]

[node name="Area" type="PanelContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = -392.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 0
script = ExtResource("1_wqt65")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
unique_name_in_owner = true
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="AreaNameInput" type="TextEdit" parent="HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(280.59, 44.485)
layout_mode = 2
size_flags_horizontal = 0
placeholder_text = "Area Name..."

[node name="ChangeBgImage" type="Button" parent="HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Change BG Image"
script = ExtResource("2_agvtm")

[node name="BgPreview" type="TextureRect" parent="HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 173.325)
layout_mode = 2
texture = ExtResource("3_oexlg")
expand_mode = 2

[node name="HFlowContainer" type="HFlowContainer" parent="HBoxContainer"]
custom_minimum_size = Vector2(862.04, 0)
layout_mode = 2

[node name="NewAreaLink" type="Button" parent="HBoxContainer/HFlowContainer"]
layout_mode = 2
size_flags_vertical = 0
text = "Add new area link"
script = ExtResource("4_nct1h")

[connection signal="update_map" from="." to="." method="_on_update_map"]
[connection signal="text_changed" from="HBoxContainer/VBoxContainer/AreaNameInput" to="." method="_on_area_name_input_text_changed"]
[connection signal="background_passer" from="HBoxContainer/VBoxContainer/ChangeBgImage" to="." method="_on_change_bg_image_background_passer"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/ChangeBgImage" to="HBoxContainer/VBoxContainer/ChangeBgImage" method="_on_pressed"]
[connection signal="pressed" from="HBoxContainer/HFlowContainer/NewAreaLink" to="HBoxContainer/HFlowContainer/NewAreaLink" method="_on_pressed"]
